package SmartHomeDDD.vo;

public interface Settings extends ValueObject<Object[]>{
}
