@startuml
title <size: 30> DecimalValueActuator Class Diagram v5.0

note "<b>Only methods related to Decimal \n<b>Value Actuator are represented" as 1

skinparam linetype ortho

interface Actuator {
    + getActuatorTypeID() : ActuatorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getActuatorName() : ActuatorNameVO
}

interface ActuatorExternalService{
    + executeDecimalCommand(value : double) : boolean
}

interface DomainEntity {
    + getID() : DomainID
}

interface DomainID {
    + getID() : String
}

interface ValueObject<T> {
    + getValue() : T
}

interface Settings {
}

class DecimalValueActuator {
    - actuatorID : ActuatorIDVO
    - actuatorName : ActuatorNameVO
    - actuatorTypeID : ActuatorTypeIDVO
    - deviceIDVO : DeviceIDVO
    - decimalSettings : DecimalSettingsVO

    + DecimalValueActuator(actuatorName : ActuatorNameVO, actuatorTypeID : ActuatorTypeIDVO,\n deviceID : DeviceIDVO, settings : Settings)
    + executeCommand(hardware : ActuatorExternalService, value : double) : String
    - isValueWithinLimits(value : double) : boolean
    - validValuePrecision(value : double, precision : double) : boolean
    - countDecimalPlaces(double value) : int
}


class SimHardwareAct {

}

class ActuatorNameVO {
    - actuatorName : String
    + ActuatorNameVO(actuatorName : String)
    + getValue() : String
}

class ActuatorIDVO {
    - identifier : UUID
    + ActuatorIDVO(identifier : UUID)
}

class ActuatorTypeIDVO {
    - actuatorTypeID : String
    + ActuatorTypeIDVO(actuatorTypeID : String)
}

class DeviceIDVO {
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
}

class DecimalSettingsVO {
    - lowerLimit : double
    - upperLimit : double
    - precision : double

    + DecimalSettingsVO(lowerLimit : String, upperLimit : String, precision : String)
    + getValue() : Double[]
    - validSettings(lowerLimit : double, upperLimit : double, precision : double) : boolean
    - countDecimalPlaces(value : double) : int
}

ValueObject <|-- Settings
DomainEntity <|-left- Actuator
Actuator <|.up. DecimalValueActuator
SimHardwareAct <.. DecimalValueActuator
ActuatorNameVO "1" --o "1" DecimalValueActuator
ActuatorIDVO "1" --* "1" DecimalValueActuator
ActuatorTypeIDVO "1" --o "*" DecimalValueActuator
DeviceIDVO "1" --o "*" DecimalValueActuator
DecimalSettingsVO "1" --o "1" DecimalValueActuator
ValueObject <|... ActuatorNameVO
Settings <|... DecimalSettingsVO
DomainID <|.. ActuatorIDVO
DomainID <|.. ActuatorTypeIDVO
DomainID <|.. DeviceIDVO
ActuatorExternalService <|.. SimHardwareAct
@enduml